Fix solution modal on smaller mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,6 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   border-radius: 16px;
   background-color:rgba(255, 255, 255, 1);
   backdrop-filter: blur(10px);
-  padding: 40px !important;
 }
 
 .mat-dialog-actions {
@@ -32,7 +31,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   margin-bottom: 0px !important;
 
   button {
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
 
